--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ locale                   : "en-US"
 title                    : "데이터분석 취업시켜줘 제발"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "SOEUN"
+description              : "data analysis"
 url                      : "https://soeunjung.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
