--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ author:
   name             : "SO EUN"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Big Data Analyst"
-  location         : "Somewhere"
+  location         : "SEOUL"
   email            :
   links:
     - label: "Email"
